# metazion

./: .gitignore  CMakeLinux.sh  CMakeLists.txt  CMakeMacos.sh  CMakeWindows.bat  CMakeWindows.sh  LICENCE  LICENSE  README.md  ReadMe  lcmake.sh  mcmake.sh  wcmake.sh
Metazion/: CMakeLists.txt  CoreInclude.hpp  Define.hpp  Function.cpp  Function.hpp  Overall.hpp  Platform.hpp  Type.hpp
Metazion/Net/: Address.hpp  AlternativeService.hpp  AlternativeStrategy.hpp  AlternativeThread.hpp  AppClientSocket.cpp  AppClientSocket.hpp  AppListenSocket.cpp  AppListenSocket.hpp  AppNetworkService.hpp  AppServerSocket.cpp  AppServerSocket.hpp  AppSocketServer.cpp  AppSocketServer.hpp  BaseListenSocket.hpp  BaseSocketServer.cpp  BaseSocketServer.hpp  BaseTransmitSocket.hpp  CMakeLists.txt  ComAccepter.cpp  ComAccepter.hpp  ComConnecter.cpp  ComConnecter.hpp  ComPacketer.cpp  ComPacketer.hpp  EpollIoThread.cpp  EpollIoThread.hpp  EpollListenSocket.cpp  EpollListenSocket.hpp  EpollListenStrategy.cpp  EpollListenStrategy.hpp  EpollOperation.hpp  EpollService.cpp  EpollService.hpp  EpollSocket.cpp  EpollSocket.hpp  EpollSocketServer.cpp  EpollSocketServer.hpp  EpollStrategy.hpp  EpollTransmitSocket.cpp  EpollTransmitSocket.hpp  (+71 more)
Metazion/Share/: CMakeLists.txt  ShareInclude.hpp
Metazion/Share/Algorithm/: StringHash.hpp
Metazion/Share/Async/: AsyncService.cpp  AsyncService.hpp  AsyncThread.cpp  AsyncThread.hpp
Metazion/Share/Collection/: ArrayList.hpp  DynamicArray.hpp  DynamicSortedArray.hpp  HashMap.hpp  Hasher.hpp  List.hpp  ListIterator.hpp  Map.hpp  MapIterator.hpp  PriorityQueue.hpp  RBTree.hpp  SelfArrayList.hpp  SelfList.hpp  StaticArray.hpp  StaticSortedArray.hpp  UDList.hpp  UDSelfList.hpp  UnidList.hpp  UnidSelfList.hpp
Metazion/Share/Log/: LogDefine.hpp  Logger.hpp
Metazion/Share/Memory/: BlockAllocator.hpp  HeapAllocator.hpp  InputBuffer.hpp  MemoryPiece.hpp  MemoryRecordset.cpp  MemoryRecordset.hpp  ObjectPool.hpp  OutputBuffer.hpp  PieceBuffer.hpp  RingBuffer.hpp  ShrinkStepAllocator.hpp  StepAllocator.hpp  StepBuffer.hpp
Metazion/Share/Misc/: MemoryInputStream.cpp  MemoryInputStream.hpp  MemoryOutputStream.cpp  MemoryOutputStream.hpp
Metazion/Share/Pattern/: Singleton.hpp
Metazion/Share/Sync/: AutoGuard.hpp  MutexLock.hpp  MutexLock_Lin.hpp  MutexLock_Win.hpp  NoneLock.hpp
Metazion/Share/Thread/: Thread.cpp  Thread.hpp  ThreadLocalStorage.cpp  ThreadLocalStorage.hpp  Thread_Lin.cpp  Thread_Lin.hpp  Thread_Win.cpp  Thread_Win.hpp
Metazion/Share/Time/: Time.cpp  Time.hpp
Metazion/Share/Utility/: Random.cpp  Random.hpp  StringFunction.cpp  StringFunction.hpp  Utility.cpp  Utility.hpp
