CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(Metazion)
SET(PRODUCT_VERSION 1.0)

SET(SELF Metazion)
SET(DEPENDENCE Dependence)
SET(INC Inc)
SET(LIB Lib)
SET(BIN Bin)

IF (CMAKE_SIZEOF_VOID_P MATCHES 8)
SET(IS_64_BIT TRUE)
ELSE()
SET(IS_64_BIT FALSE)
ENDIF()

IF(IS_64_BIT)
SET(PLATFORM x64)
ELSE()
SET(PLATFORM x86)
ENDIF()

SET(CMAKE_C_COMPILER cc)
SET(CMAKE_CXX_COMPILER c++)

IF(WIN32)
SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} /MDd /Zi /Od /Ob0 /RTC1")
SET(CMAKE_C_FLAGS_RELEASE   "${CMAKE_C_FLAGS_RELEASE} /MD /O2 /Ob2") 
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MDd /Zi /Od /Ob0 /RTC1")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MD /O2 /Ob2")
SET(CMAKE_EXE_LINKER_FLAGS "/MANIFEST:NO")
ENDIF(WIN32)

IF(UNIX)
SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -std=c99 -g -Wall -D_DEBUG")
SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -std=c99 -g -Wall")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -std=c++14 -g -Wall -D_DEBUG")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -std=c++14 -g -Wall")
ENDIF(UNIX)

SET(CMAKE_DEBUG_POSTFIX D)
SET(CMAKE_BUILD_TYPE DEBUG)

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})

SET(SELF_DIR ${PROJECT_SOURCE_DIR})
SET(BUILD_DIR ${PROJECT_BINARY_DIR})
SET(INCLUDE_DIR ${SELF_DIR})
SET(SOURCE_DIR ${SELF_DIR})
SET(DEPENDENCE_DIR ${SELF_DIR}/${DEPENDENCE})
SET(INC_DIR ${SELF_DIR}/${INC})
SET(LIB_DIR ${SELF_DIR}/${LIB}/${PLATFORM})
SET(BIN_DIR ${SELF_DIR}/${BIN}/${PLATFORM})

OPTION(PRODUCT_INSTALL "Install libs, includes, and CMake scripts" ON)

MESSAGE(STATUS "IS_64_BIT: ${IS_64_BIT}")
MESSAGE(STATUS "PLATFORM: ${PLATFORM}")

MESSAGE(STATUS "PROJECT_SOURCE_DIR: ${PROJECT_SOURCE_DIR}")
MESSAGE(STATUS "PROJECT_BINARY_DIR: ${PROJECT_BINARY_DIR}")
MESSAGE(STATUS "PRODUCT_VERSION: ${PRODUCT_VERSION}")

MESSAGE(STATUS "CMAKE_C_COMPILER: ${CMAKE_C_COMPILER}")
MESSAGE(STATUS "CMAKE_C_FLAGS_DEBUG: ${CMAKE_C_FLAGS_DEBUG}")
MESSAGE(STATUS "CMAKE_C_FLAGS_RELEASE: ${CMAKE_C_FLAGS_RELEASE}")
MESSAGE(STATUS "CMAKE_CXX_COMPILER: ${CMAKE_CXX_COMPILER}")
MESSAGE(STATUS "CMAKE_CXX_FLAGS_DEBUG: ${CMAKE_CXX_FLAGS_DEBUG}")
MESSAGE(STATUS "CMAKE_CXX_FLAGS_RELEASE: ${CMAKE_CXX_FLAGS_RELEASE}")
MESSAGE(STATUS "CMAKE_DEBUG_POSTFIX: ${CMAKE_DEBUG_POSTFIX}")
MESSAGE(STATUS "CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")

MESSAGE(STATUS "SELF_DIR: ${SELF_DIR}")
MESSAGE(STATUS "BUILD_DIR: ${BUILD_DIR}")
MESSAGE(STATUS "INCLUDE_DIR: ${INCLUDE_DIR}")
MESSAGE(STATUS "SOURCE_DIR: ${SOURCE_DIR}")
MESSAGE(STATUS "DEPENDENCE_DIR: ${DEPENDENCE_DIR}")
MESSAGE(STATUS "LIB_DIR: ${LIB_DIR}")
MESSAGE(STATUS "BIN_DIR: ${BIN_DIR}")

ADD_SUBDIRECTORY(${SELF})