FILE(GLOB METAZION_NET_HEADERS "./*.hpp")
FILE(GLOB METAZION_NET_SOURCES "./*.cpp")

SET(LIBRARY_OUTPUT_PATH ${BUILD_DIR}/${LIB}/${PLATFORM})
SET(EXECUTABLE_OUTPUT_PATH ${BUILD_DIR}/${BIN}/${PLATFORM})

ADD_LIBRARY(Net STATIC
    ${METAZION_NET_HEADERS}
    ${METAZION_NET_SOURCES}
)

SET_TARGET_PROPERTIES(Net PROPERTIES
    OUTPUT_NAME "MzNet"
    CLEAN_DIRECT_OUTPUT 1
    VERSION ${PRODUCT_VERSION}
    VERSION ${PRODUCT_VERSION}
)

IF(PRODUCT_INSTALL)
    INSTALL(TARGETS Net
    RUNTIME DESTINATION ${BIN_DIR}
    LIBRARY DESTINATION ${LIB_DIR}
    ARCHIVE DESTINATION ${LIB_DIR})
ENDIF(PRODUCT_INSTALL)

IF(WIN32)
# Create visual studio folders.
SOURCE_GROUP(Header FILES ${METAZION_NET_HEADERS})
SOURCE_GROUP(Source FILES ${METAZION_NET_SOURCES})
ENDIF(WIN32)