FILE(GLOB METAZION_SHARE_HEADERS "./*.hpp")
FILE(GLOB METAZION_SHARE_SOURCES "./*.cpp")

FILE(GLOB METAZION_SHARE_COLLECTION_HEADERS "Collection/*.hpp")
FILE(GLOB METAZION_SHARE_COLLECTION_SOURCES "Collection/*.cpp")

FILE(GLOB METAZION_SHARE_MEMORY_HEADERS "Memory/*.hpp")
FILE(GLOB METAZION_SHARE_MEMORY_SOURCES "Memory/*.cpp")

FILE(GLOB METAZION_SHARE_MISC_HEADERS "Misc/*.hpp")
FILE(GLOB METAZION_SHARE_MISC_SOURCES "Misc/*.cpp")

FILE(GLOB METAZION_SHARE_PATTERN_HEADERS "Pattern/*.hpp")
FILE(GLOB METAZION_SHARE_PATTERN_SOURCES "Pattern/*.cpp")

FILE(GLOB METAZION_SHARE_SYNC_HEADERS "Sync/*.hpp")
FILE(GLOB METAZION_SHARE_SYNC_SOURCES "Sync/*.cpp")

FILE(GLOB METAZION_SHARE_THREAD_HEADERS "Thread/*.hpp")
FILE(GLOB METAZION_SHARE_THREAD_SOURCES "Thread/*.cpp")

FILE(GLOB METAZION_SHARE_TIME_HEADERS "Time/*.hpp")
FILE(GLOB METAZION_SHARE_TIME_SOURCES "Time/*.cpp")

FILE(GLOB METAZION_SHARE_UTILITY_HEADERS "Utility/*.hpp")
FILE(GLOB METAZION_SHARE_UTILITY_SOURCES "Utility/*.cpp")

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
SET(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/lib)

ADD_LIBRARY(Share STATIC
    ${METAZION_HEADERS}
    ${METAZION_SOURCES}
    ${METAZION_SHARE_HEADERS}
    ${METAZION_SHARE_SOURCES}
    ${METAZION_SHARE_COLLECTION_HEADERS}
    ${METAZION_SHARE_COLLECTION_SOURCES}
    ${METAZION_SHARE_MEMORY_HEADERS}
    ${METAZION_SHARE_MEMORY_SOURCES}
    ${METAZION_SHARE_MISC_HEADERS}
    ${METAZION_SHARE_MISC_SOURCES}
    ${METAZION_SHARE_PATTERN_HEADERS}
    ${METAZION_SHARE_PATTERN_SOURCES}
    ${METAZION_SHARE_SYNC_HEADERS}
    ${METAZION_SHARE_SYNC_SOURCES}
    ${METAZION_SHARE_THREAD_HEADERS}
    ${METAZION_SHARE_THREAD_SOURCES}
    ${METAZION_SHARE_TIME_HEADERS}
    ${METAZION_SHARE_TIME_SOURCES}
    ${METAZION_SHARE_UTILITY_HEADERS}
    ${METAZION_SHARE_UTILITY_SOURCES}
)

SET_TARGET_PROPERTIES(Share PROPERTIES
    OUTPUT_NAME "MzShare"
    CLEAN_DIRECT_OUTPUT 1
    VERSION ${PRODUCT_VERSION}
    SOVERSION ${PRODUCT_VERSION}
)

IF(PRODUCT_INSTALL)
    INSTALL(TARGETS Share
    RUNTIME DESTINATION ${BIN_DIR}
    LIBRARY DESTINATION ${LIB_DIR}
    ARCHIVE DESTINATION ${LIB_DIR})
ENDIF(PRODUCT_INSTALL)

IF(WIN32)
# Create visual studio folders.
SOURCE_GROUP(${SELF} FILES ${METAZION_HEADERS} ${METAZION_SOURCES})
SOURCE_GROUP(Header FILES ${METAZION_SHARE_HEADERS})
SOURCE_GROUP(Header\\Collection FILES ${METAZION_SHARE_COLLECTION_HEADERS})
SOURCE_GROUP(Header\\Memory FILES ${METAZION_SHARE_MEMORY_HEADERS})
SOURCE_GROUP(Header\\Misc FILES ${METAZION_SHARE_MISC_HEADERS})
SOURCE_GROUP(Header\\Pattern FILES ${METAZION_SHARE_PATTERN_HEADERS})
SOURCE_GROUP(Header\\Sync FILES ${METAZION_SHARE_SYNC_HEADERS})
SOURCE_GROUP(Header\\Thread FILES ${METAZION_SHARE_THREAD_HEADERS})
SOURCE_GROUP(Header\\Time FILES ${METAZION_SHARE_TIME_HEADERS})
SOURCE_GROUP(Header\\Utility FILES ${METAZION_SHARE_UTILITY_HEADERS})
SOURCE_GROUP(Source FILES ${METAZION_SHARE_SOURCES})
SOURCE_GROUP(Source\\Collection FILES ${METAZION_SHARE_COLLECTION_SOURCES})
SOURCE_GROUP(Source\\Memory FILES ${METAZION_SHARE_MEMORY_SOURCES})
SOURCE_GROUP(Source\\Misc FILES ${METAZION_SHARE_MISC_SOURCES})
SOURCE_GROUP(Source\\Pattern FILES ${METAZION_SHARE_PATTERN_SOURCES})
SOURCE_GROUP(Source\\Sync FILES ${METAZION_SHARE_SYNC_SOURCES})
SOURCE_GROUP(Source\\Thread FILES ${METAZION_SHARE_THREAD_SOURCES})
SOURCE_GROUP(Source\\Time FILES ${METAZION_SHARE_TIME_SOURCES})
SOURCE_GROUP(Source\\Utility FILES ${METAZION_SHARE_UTILITY_SOURCES})
ENDIF(WIN32)